# signalsift

./: .gitignore  CLAUDE.md  README.md  coverage.json  pyproject.toml  test-utils.js
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: CLAUDE.md  cs-assess.md  cs-debug.md  cs-deploy.md  cs-docs.md  cs-init.md  cs-learn.md  cs-log.md  cs-loop.md  cs-multi.md  cs-plan.md  cs-review.md  cs-sessions.md  cs-status.md  cs-team.md  cs-ui.md  cs-validate.md
.claude/hooks/: README.md  agent-synthesizer.cjs  agent-tracker.cjs  bash-validator.cjs  config-watcher.cjs  context-injector.cjs  dod-verifier.cjs  file-validator.cjs  gate-monitor.cjs  post-edit.cjs  pre-compact.cjs  session-end.cjs  session-start.cjs  task-completed.cjs  teammate-idle.cjs  utils.cjs  worktree-lifecycle.cjs
.claude/rules/: anthropic-patterns.md  api-design.md  code-quality.md  database.md  documentation.md  error-handling.md  git-workflow.md  logging.md  performance.md  prompt-structure.md  security.md  terminal-ui.md  testing.md  ui-ux-design.md
.claude/state/: agent_history.json  compact-context.json  context_degradation.json  file_changes.json  (+5 more)
.codex/: instructions.md
agents/: CLAUDE.md  architect.yaml  backend.yaml  build-resolver.yaml  database.yaml  devops.yaml  docs.yaml  frontend.yaml  security.yaml  tester.yaml
documentation/: 01-database-config.md  02-sources.md  03-keywords.md  04-scan.md  05-scoring.md  06-reports.md  07-cache.md  08-competitive-intelligence.md  _index.md
examples/: django-api.md  go-microservice.md  nextjs-supabase.md  rust-api.md
profiles/: CLAUDE.md  _profile.schema.yaml  cpp.yaml  general.yaml  go.yaml  java.yaml  python.yaml  ruby.yaml  rust.yaml  shell.yaml  typescript.yaml
rules/: _index.md  api-design.md  database.md  documentation.md  error-handling.md  git-workflow.md  logging.md  performance.md  security.md  terminal-ui.md  testing.md
schemas/: agent.schema.json  base.schema.json  command.schema.json  config-change.schema.json  event.schema.json  gate-history.schema.json  gate.schema.json  phase.schema.json  profile.schema.json  session-state.schema.json  skill.schema.json  state.schema.json  team-state.schema.json  worktree-context.schema.json
templates/: settings.json
tests/: CLAUDE.md  conftest.py  test_exceptions.py
(+74 files in other folders)
