[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signalsift"
version = "1.0.0"
description = "Personal community intelligence tool - monitor Reddit, YouTube, and Hacker News for topics you care about"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["reddit", "youtube", "hackernews", "monitoring", "cli", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "click>=8.1.0",
    "praw>=7.7.0",
    "google-api-python-client>=2.100.0",
    "youtube-transcript-api>=0.6.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "textblob>=0.18.0",
    "requests>=2.31.0",
    "feedparser>=6.0.0",
]

[project.optional-dependencies]
nlp = [
    "spacy>=3.7.0",
]
ai = [
    "openai>=1.0.0",
    "anthropic>=0.39.0",
]
semantic = [
    "faiss-cpu>=1.7.4",
]
all = [
    "spacy>=3.7.0",
    "openai>=1.0.0",
    "anthropic>=0.39.0",
    "faiss-cpu>=1.7.4",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
sift = "signalsift.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/signalsift"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["signalsift"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["signalsift"]
branch = true
omit = ["*/tests/*", "*/conftest.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
